--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
       "require": "./dist/vuetify-command-palette.umd.js"
     }
   },
-  "files": [ "dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "^7.2.96",
     "@vueuse/core": "^9.13.0",
     "vue": "^3.2.25",
     "vue-hotkeys-rt": "^0.2.0",
