--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "files": [
     "dist"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MaxHilmbauer/vuetify-command-palette.git"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
